--- a/.gitignore
+++ b/.gitignore
@@ -63,4 +63,5 @@ target/
 
 
 # Reddit comments file
+# Add below the name of your reddit comments file so it's not uploaded on the repository
 rcomments
